--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,6 @@
 }
 
 body {
-    display: grid;
     box-sizing: border-box;
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
@@ -38,7 +37,7 @@ body {
 
 .cabecalho__menu__link {
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -60,23 +59,13 @@ body {
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__texto {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-terciaria);
-}
-
-.apresentacao__conteudo__texto__about {
-    font-size: 24px;
-    font-family: var(--fonte-terciaria);
-    padding-top: 25px;
-}
-
-.apresentacao__imagem__about {
-    width: auto;
 }
 
 .apresentacao__links {
@@ -89,7 +78,7 @@ body {
 
 .apresentacao__links__subtitulo {
     font-family: var(--fonte-primaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
@@ -117,36 +106,22 @@ body {
     width: 50%;
 }
 
-.rodape__index , .rodape__about {
+.rodape {
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
-    padding: 12px;
-    position: fixed;
+    padding: 24px;
     left: 0;
     bottom: 0;
     width: 100%;
     text-align: center;
     font-weight: 400;
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
-}
-
-.rodape__curriculo {
-    color: var(--cor-primaria);
-    background-color: var(--cor-terciaria);
-    padding: 12px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    font-weight: 400;
-    font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .CV {
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -169,12 +144,12 @@ body {
 }
 
 .secao__titulo {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
 
 .secao__texto {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-terciaria);
 }
 
